src/test/deca/syntax/valid/sansObjet/Or.deca
{
    boolean x =true;
    boolean y = false;

    boolean z = x || y ;

    if(!z){
        println("Hello 2020");
    }
}