src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse3.deca
{
    int x=2;
    if (!=){
        println("x = "+x);
    }
}